WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35769
[Qt] QtLauncher Print option is not working on QGraphicsView mode
https://bugs.webkit.org/show_bug.cgi?id=35769
Summary
[Qt] QtLauncher Print option is not working on QGraphicsView mode
Jesus Sanchez-Palencia
Reported
2010-03-04 15:19:54 PST
[Qt] QtLauncher Print option is not working on QGraphicsView mode
Attachments
Patch
(1.09 KB, patch)
2010-03-04 15:21 PST
,
Jesus Sanchez-Palencia
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jesus Sanchez-Palencia
Comment 1
2010-03-04 15:21:39 PST
Created
attachment 50056
[details]
Patch
Eric Seidel (no email)
Comment 2
2010-03-05 12:56:54 PST
Comment on
attachment 50056
[details]
Patch OK.
WebKit Commit Bot
Comment 3
2010-03-05 19:48:41 PST
Comment on
attachment 50056
[details]
Patch Clearing flags on attachment: 50056 Committed
r55610
: <
http://trac.webkit.org/changeset/55610
>
WebKit Commit Bot
Comment 4
2010-03-05 19:48:45 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug