2010-03-05  Jesus Sanchez-Palencia  <jesus.palencia@openbossa.org>

Reviewed by Eric Seidel.

        Fix Print option on QtLauncher by calling print directly from QWebFrame.

        [Qt] QtLauncher Print option is not working on QGraphicsView mode
        https://bugs.webkit.org/show_bug.cgi?id=35769

        * QtLauncher/main.cpp:
        (LauncherWindow::print):

Canonical link: https://commits.webkit.org/46907@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55610 268f45cc-cd09-0410-ab3c-d52691b4dbfc