WebKitTools/QtLauncher/main.cpp
@@ -431,7 +431,7 @@ void LauncherWindow::print()
 #if !defined(QT_NO_PRINTER)
     QPrintPreviewDialog dlg(this);
     connect(&dlg, SIGNAL(paintRequested(QPrinter*)),
-            m_view, SLOT(print(QPrinter*)));
+            page()->mainFrame(), SLOT(print(QPrinter*)));
     dlg.exec();
 #endif
 }
